--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"node-sass": "^4.11.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-router-dom": "^5.2.0",
+		"react-router-dom": "5.0.0",
 		"react-scripts": "2.1.8",
 		"web-vitals": "^0.2.4"
 	},
